Refactor competition models and services to support competition types and templates
